--- a/home.html
+++ b/home.html
@@ -33,7 +33,7 @@
                                 <div class="image">
                                     <img src="./media/player1.jpg" alt="">
                                 </div>
-                                <p class="m-0">Ramos</p>
+                                <p class="m-0">Messi</p>
                             </a>
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="chat.html">Send Message</a></li>
@@ -44,7 +44,7 @@
                                 <div class="image">
                                     <img src="./media/player2.jpg" alt="">
                                 </div>
-                                <p class="m-0">Casemiro</p>
+                                <p class="m-0">Cristiano</p>
                             </a>
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="chat.html">Send Message</a></li>
