--- a/home.html
+++ b/home.html
@@ -33,7 +33,7 @@
                                 <div class="image">
                                     <img src="./media/player1.jpg" alt="">
                                 </div>
-                                <p class="m-0">Messi</p>
+                                <p class="m-0">Ramos</p>
                             </a>
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="chat.html">Send Message</a></li>
@@ -55,7 +55,7 @@
                                 <div class="image">
                                     <img src="./media/player3.jpg" alt="">
                                 </div>
-                                <p class="m-0">Kroos</p>
+                                <p class="m-0">Vidal</p>
                             </a>
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="chat.html">Send Message</a></li>
@@ -66,7 +66,7 @@
                                 <div class="image">
                                     <img src="./media/player4.jpg" alt="">
                                 </div>
-                                <p class="m-0">Benzema</p>
+                                <p class="m-0">Jack</p>
                             </a>
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="chat.html">Send Message</a></li>
