--- a/split-payment.html
+++ b/split-payment.html
@@ -49,7 +49,7 @@
                                 <div class="image">
                                     <img src="./media/player2.jpg" alt="">
                                 </div>
-                                <p class="m-0">Casemiro</p>
+                                <p class="m-0">Cristiano</p>
                             </a>
                         </div>
                         <div class="col-auto">
@@ -57,7 +57,7 @@
                                 <div class="image">
                                     <img src="./media/player3.jpg" alt="">
                                 </div>
-                                <p class="m-0">Kroos</p>
+                                <p class="m-0">Vidal</p>
                             </a>
                         </div>
                         <div class="col-auto">
@@ -65,7 +65,7 @@
                                 <div class="image">
                                     <img src="./media/player4.jpg" alt="">
                                 </div>
-                                <p class="m-0">Benzema</p>
+                                <p class="m-0">Jack</p>
                             </a>
                         </div>
                     </div>
