--- a/chat.html
+++ b/chat.html
@@ -38,7 +38,7 @@
                         <img src="./media/player2.jpg" alt="" style="width: 50px;height: 50px;object-fit: cover;border-radius: 10px;">
                     </div>
                     <div class="ms-2">
-                        <p class="m-0 fs-5 fw-semibold">KROOS</p>
+                        <p class="m-0 fs-5 fw-semibold">CRISTIANO</p>
                         <small>When you're free?</small>
                     </div>
                 </a>
@@ -47,7 +47,7 @@
                         <img src="./media/player3.jpg" alt="" style="width: 50px;height: 50px;object-fit: cover;border-radius: 10px;">
                     </div>
                     <div class="ms-2">
-                        <p class="m-0 fs-5 fw-semibold">BEZZEMA</p>
+                        <p class="m-0 fs-5 fw-semibold">VIDAL</p>
                         <small>Cristiano is the G.O.A.T!</small>
                     </div>
                 </a>
@@ -56,7 +56,7 @@
                         <img src="./media/player4.jpg" alt="" style="width: 50px;height: 50px;object-fit: cover;border-radius: 10px;">
                     </div>
                     <div class="ms-2">
-                        <p class="m-0 fs-5 fw-semibold">MODRIC</p>
+                        <p class="m-0 fs-5 fw-semibold">JACK</p>
                         <small>I'm free let's meet today!</small>
                     </div>
                 </a>
