--- a/home.html
+++ b/home.html
@@ -75,7 +75,7 @@
                     </div>
                 </div>
                 <div class="available-fields mb-1">
-                    <h5 class="fs-5 mb-2">Availalbe Fields</h5>
+                    <h5 class="fs-5 mb-2">Available Fields</h5>
                     <div class="row">
                         <div class="col-md-12">
                             <div class="container">
